--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <div class="right-column">
       <div class="section-title">Recent GitHub Activity</div>
-      <img src="github_activity_realistic.png" alt="GitHub Activity Bar" style="width: 100%; max-width: 500px;" />
+      <img src="github_activity_realistic (1).png" alt="GitHub Activity Bar" style="width: 100%; max-width: 500px;" />
 
       <div class="section-title">Project Availability</div>
       <ul>
